removed unncecessary gradle files and adjusted the dockerfile and build.gradle to add a gradle build step prior to running